<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="1"
        android:id="@+id/Grid1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:id="@+id/RL1"
            android:layout_gravity="center">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_search"
                android:layout_toLeftOf="@+id/btn_search"
                android:text="@string/mainActivity_search" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainActivity_search"
                android:layout_alignParentRight="true"
                android:id="@+id/btn_search" />

        </RelativeLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Grid2"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainActivity_btn_posts"
                    android:layout_rowWeight="2"
                    android:layout_columnWeight="1"
                    android:id="@+id/button3" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainActivity_btn_profile"
                    android:layout_rowWeight="2"
                    android:layout_columnWeight="1"
                    android:id="@+id/button2" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainActivity_btn_newPost"
                    android:layout_rowWeight="2"
                    android:layout_columnWeight="1"
                    android:id="@+id/button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainActivity_btn_chat"
                    android:layout_rowWeight="2"
                    android:layout_columnWeight="1"
                    android:id="@+id/button4" />

        </GridLayout>

    </GridLayout>

</RelativeLayout>
